# Hackahton-IV

./: .gitignore  tsconfig.json  vercel.json
Complete-project/: $null  .gitignore  PHASE2_TESTING_QUICKSTART.md  PHASE3_FINAL_STATUS.md  PHASE3_IMPLEMENTATION_STATUS.md  check_user_tier_standalone.py  list_users.py  list_users_final.py  vercel.json
Complete-project/backend/: check_chapters_schema.py  check_db_chapters_v2.py  check_schema_clean.py  check_schema_full.py  (+8 more)
Phase-I/: Hackahton.md  README.md  SKILLS-DOCUMENTATION.md
Phase-I/backend/: .env.example  README.md  alembic.ini  error.txt  pyproject.toml
Phase-I/backend/app/: database.py
Phase-I/backend/app/models/: __init__.py  progress.py  quiz.py  user.py
Phase-I/backend/app/routers/: __init__.py  access.py  chapters.py  quizzes.py  users.py
Phase-I/backend/app/schemas/: __init__.py  chapter.py  common.py  quiz.py
Phase-I/backend/app/services/: __init__.py  access_service.py  r2_service.py
Phase-I/backend/app/utils/: __init__.py
Phase-I/backend/content/chapters/ch-005/: content.md
Phase-I/backend/seed/: init_db.py  seed_chapters.py  seed_chapters_simple.py  seed_quizzes_simple.py  seed_simple.py  seed_user_simple.py
Phase-I/backend/tests/: conftest.py  test_chapters.py  test_progress.py
Phase-II/: PHASE1_COMPLETE_SUMMARY.md  PHASE2_FINAL_ASSESSMENT.md  PHASE2_IMPLEMENTATION_COMPLETE.md
Phase-III/: HACKAHTON_COMPLIANCE_CHECKLIST.md  LICENSE  PHASE2_COMPLETION_SUMMARY.md  PHASE2_VERIFICATION_REPORT.md  PHASE3_COMPLETE_SUMMARY.md  README.md  check_users_schema.py
frontend/: index.html
(+245 files in other folders)
